Fixed the alignment a little push before trying to remove borders and adding dividers

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ body {
 	right:0px;
 	border-left:2px solid;
 	border-color:#27303E;
+	margin-top:-2px;
 
 }
 
